ogimageの文字がVercelでは生成されない問題 / aboutちょっと追記

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -13,4 +13,14 @@ import AboutSVG from '@components/AboutSVG.astro'
 -   PHP(Laravel/CodeIgniter/WordPress)
 -   Other(Blender/Docker)
 
+## 好き
+
+### ゲーム
+- ゼルダの伝説
+- 魔女の泉
+- Kingdom Two Crowns
+
+### その他
+- 中国語/中華料理
+
 <AboutSVG />
